# game_engine

./: CMakeLists.txt  README.md
assets/shaders/: basic.vert
engine/include/asset/: model_loader.h
engine/include/context/: openglcontext.h
engine/include/core/: time.h  window.h
engine/include/math/: layout_traits.h  math.h  uniform_traits.h
engine/include/rendering/: index_buffer.h  mesh.h  renderer.h  shader.h  vertex_array.h  vertex_buffer.h  vertex_buffer.tcc  vertex_layout.h  vertex_layout.tcc
engine/include/scene/: camera.h  transform.h
engine/src/asset/: model_loader.cc
engine/src/context/: openglcontext.cc
engine/src/core/: time.cc  window.cc
engine/src/rendering/: index_buffer.cc  mesh.cc  renderer.cc  shader.cc  vertex_array.cc  vertex_buffer.cc  vertex_layout.cc
engine/src/scene/: camera.cc  transform.cc
sandbox/: main.cc
